--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,11 @@ dependencies:
   animated_text_kit: ^4.2.2
   flutter_gif: ^0.0.4
   home_widget: ^0.2.0+1
+  geolocator: ^9.0.2
+  flutter_background_service: ^2.4.6
+  flutter_background_service_ios: ^2.4.0
+  flutter_background_service_android: ^3.0.3
+  flutter_background_service_platform_interface: ^2.2.0
 
 dev_dependencies:
   flutter_test:
