--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  intl: ^0.18.1
   firebase_core: ^2.8.0
   firebase_database: ^10.0.0
   firebase_messaging: ^14.4.1
@@ -53,6 +54,7 @@ dependencies:
   flutter_background_service_android: ^3.0.3
   flutter_background_service_platform_interface: ^2.2.0
   flutter_chat_bubble: ^2.0.2
+  alarm: ^1.0.1
 
 dev_dependencies:
   flutter_test:
